Avoid misalignment in FF (#6253)
[27425] Breadcrumb misplaced in FF

[ci skip]

--- a/app/assets/stylesheets/layout/_breadcrumb.sass
+++ b/app/assets/stylesheets/layout/_breadcrumb.sass
@@ -88,7 +88,7 @@ ul.breadcrumb
 .wp-breadcrumb
   ul.breadcrumb li
     float: left
-    margin: 0 0 0 10px
+    margin: 0 5px 0 0
     padding: 0
 
 .wp-breadcrumb
